// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a  expenseitem when no expense is passes as prop  1`] = `
<tr>
  <td>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/edit/undefined"
    />
  </td>
  <td>
    $0.00
  </td>
  <td>
    January 1st, 1970
  </td>
</tr>
`;

exports[`should render a single expenseitem when one expense is passes as prop  1`] = `
<tr>
  <td>
    <NavLink
      activeClassName="active"
      ariaCurrent="true"
      to="/edit/1"
    >
      jan rent
    </NavLink>
  </td>
  <td>
    $0.03
  </td>
  <td>
    December 27th, 1969
  </td>
</tr>
`;
